--- a/Pipfile
+++ b/Pipfile
@@ -14,11 +14,13 @@ jinja2 = "*"
 altair = "*"
 vega-datasets = "*"
 altair-viewer = "*"
-altair-saver = "*"
 selenium = "*"
 requests = "*"
 boto3 = "*"
 pytest = "*"
+shapely = "*"
+geopandas = "*"
+altair-saver = "*"
 
 [requires]
 python_version = "3.6"
