--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ data/
 logs/output/
 .vscode
 .pytest_cache
-tests/output/*
+src/tests/output/*
 
 ### gitignore Python template
 # Byte-compiled / optimized / DLL files
