--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ SECRET_KEY_ID=
 # Send grid API KEY
 SENDGRID_API_KEY=
 # Environment - used by Sentry, defaults to development if not specified
-ENVIRONMENT=development
+ENVIRONMENT=
