--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,5 +25,8 @@ jobs:
       run: |
         pipenv install
     - name: Test with pytest
+      env:
+        KEY_ID: ${{ secrets.KEY_ID }}
+        SECRET_KEY_ID: ${{ secrets.SECRET_KEY_ID }}
       run: |
         pipenv run pytest
