--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,5 +28,6 @@ jobs:
       env:
         KEY_ID: ${{ secrets.KEY_ID }}
         SECRET_KEY_ID: ${{ secrets.SECRET_KEY_ID }}
+        SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
       run: |
         pipenv run pytest
