--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,5 +29,6 @@ jobs:
         KEY_ID: ${{ secrets.KEY_ID }}
         SECRET_KEY_ID: ${{ secrets.SECRET_KEY_ID }}
         SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+        ENVIRONMENT: github_actions
       run: |
         pipenv run pytest
