--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,6 +7,9 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    # Set cronjob for 1:15pm UTC (9:15am ET)
+    - cron: "15 13 * * *"
 
 jobs:
   build:
