--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,7 +9,7 @@ on:
     branches: [ master ]
   schedule:
     # Set cronjob for every 10th min
-    - cron: "10 * * * *"
+    - cron: "*/10 * * * *"
 
 jobs:
   build:
