--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,8 +8,8 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    # Set cronjob for every 10th min
-    - cron: "*/10 * * * *"
+    # Set cronjob for 3:55pm UTC (11:55am ET)
+    - cron: "55 15 1 * *"
 
 jobs:
   build:
