--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,7 +9,7 @@ on:
     branches: [ master ]
   schedule:
     # Set cronjob for 3:55pm UTC (11:55am ET)
-    - cron: "55 15 1 * *"
+    - cron: "55 15 * * *"
 
 jobs:
   build:
