Simplify setup/run

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Key ID of your AWS IAM account
-KEY_ID=
+export KEY_ID=
 # Secret Key ID of your AWS IAM account
-SECRET_KEY_ID=
+export SECRET_KEY_ID=
 # Send grid API KEY
-SENDGRID_API_KEY=
+export SENDGRID_API_KEY=
 # Environment - used by Sentry, defaults to development if not specified
-ENVIRONMENT=
+export ENVIRONMENT=
